# rust-stream-filter

./: .gitignore  Pipfile  README.md  cdktf.json  main.py  smoke-test.sh  test-and-deploy.sh  test_main.py
artifacts/: phone_numbers.txt
src/api_lambda/: Cargo.toml
src/api_lambda/src/: main.rs
src/api_lambda/src/libs/: mod.rs
src/api_lambda/src/libs/handlers/: mod.rs
src/api_lambda/src/libs/handlers/bad_request/: mod.rs
src/api_lambda/src/libs/handlers/not_found/: mod.rs
src/api_lambda/src/libs/handlers/phonenumbers_delete_by_id/: mod.rs  tests.rs
src/api_lambda/src/libs/handlers/phonenumbers_get/: mod.rs
src/api_lambda/src/libs/handlers/phonenumbers_get_by_id/: mod.rs
src/api_lambda/src/libs/handlers/phonenumbers_post/: mod.rs
src/api_lambda/src/libs/router/: mod.rs  tests.rs
src/object_lambda/: Cargo.toml
src/object_lambda/src/: main.rs
src/object_lambda/src/libs/: mod.rs
src/object_lambda/src/libs/handlers/handler/: mod.rs  tests.rs
src/object_lambda/src/libs/stream_byte_stream_adapter/: mod.rs
src/object_lambda/src/libs/stream_filter/: mod.rs
