[package]
name = "api_lambda"
version = "0.1.0"
edition = "2021"

[dependencies]
lambda_runtime = "0.11.1"
serde = { version = "1.0.136", features = ["derive"] }
tokio = { version = "1", features = ["macros"] }
serde_json = "1.0.116"
anyhow = "1.0.82"
aws_lambda_events = "0.15.0"
aws-config = "1.2.1"
aws-sdk-s3 = "1.24.0"
base64 = "0.22.0"
uuid = { version = "1.8.0", features = ["v4"] }
clone_all = "0.1.1"

[dev-dependencies]
faux = "0.1.10"
