[package]
name = "object_lambda"
version = "0.1.0"
edition = "2021"

[dependencies]
lambda_runtime = "0.11.1"
serde = { version = "1.0.136", features = ["derive"] }
tokio = { version = "1", features = ["macros", "rt"] }
serde_json = "1.0.116"
anyhow = "1.0.82"
aws_lambda_events = "0.15.0"
aws-config = "1.2.1"
aws-sdk-s3 = "1.24.0"
reqwest = { version = "0.12.4", features = ["stream"] }
regex = "1.10.4"
futures = "0.3.30"
tokio-util = "0.7.10"
http-body = "1.0.0"
bytes = "1.6.0"
openssl = { version = "0.10", features = ["vendored"] }
tracing = "0.1.40"
clone_all = "0.1.1"
futures-core = "0.3.30"

[dev-dependencies]
faux ="0.1.10"
